--- a/task16/style.css
+++ b/task16/style.css
@@ -22,8 +22,11 @@
 
 img{
     width: 350px;
-    transition: .6s;
-   
+    transition: .6s   ;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
 }
 
 .content{
