--- a/task18/style.css
+++ b/task18/style.css
@@ -1,150 +1,154 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     height: 100vh;
     color: #333;
-    
+
 }
 
-header{
+header {
     height: 470px;
     background-color: #000;
-    background-image:linear-gradient(135deg, #000, rgba(143, 0, 255, .29));
+    background-image: linear-gradient(135deg, #000, rgba(143, 0, 255, .29));
 
 
 }
 
-.head{
-    position: absolute;
-    width: 600px;
+.head {
+    width: 700px;
     height: 250px;
-    top: 270px;
-    left: 130px;
+    padding-top: 280px;
+    padding-left: 100px;
 
-    
+
+
 }
 
-h1, h4{
-color: white;
-font-family: "Libre Franklin", sans-serif;
+.parent {
+    display: flex;
+    margin-left: 100px;
 }
 
-h1{
+h1,
+h4 {
+    color: white;
+    font-family: "Libre Franklin", sans-serif;
+}
+
+h1 {
     font-size: 45px;
     font-weight: 500;
 }
 
-h4{
+h4 {
     font-size: 16px;
     font-weight: 100;
     line-height: 28px;
 }
 
-.text{
+.text {
     width: 500px;
-   margin-top: 50px;
-   margin-left: 130px;
+    margin-top: 50px;
+    
 }
 
-h2{
+h2 {
     font-size: 32px;
     font-weight: 600;
 
 }
 
-p{
+p {
     font-size: 15px;
     line-height: 29px;
     font-weight: 300;
     font-family: "Libre Franklin", sans-serif;
 }
 
-.head2{
+.head2 {
     color: #333;
     font-size: 32px;
     line-height: 36px;
     font-weight: 600;
 }
 
-.sticky-box{
+.sticky-box {
     width: 400px;
     height: 250px;
-    background-color:#8f00ff;
-    position: absolute;
-    right: 120px;
-    top: 300px;
+    background-color: #8f00ff;
+    margin-top: -220px;
     border: 1px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: sticky;
+    top: 20px;
+    margin-left: 150px;
     
-  
 }
 
-.box-text{
-    position: relative;
+.box-text {
+
     background-color: white;
     font-size: 15px;
     line-height: 29px;
     font-weight: 300;
     font-family: "Libre Franklin", sans-serif;
     top: 100px;
-    
-   
-    
-  
+
+
+
+
 }
-.inside-text{
+
+.inside-text {
     position: relative;
     border: 1px solid rgb(221, 217, 217);
     text-align: left;
-    
+
 }
 
-.sidebar{
+.sidebar {
     color: white;
     text-align: center;
-    
-    
-    
+
+
+
 }
 
-.sidebar-box{
+.sidebar-box {
     margin-top: 125px;
-    
+
 }
 
-footer{
+footer {
     width: 100%;
     height: 100vh;
     background-color: #000;
-    background-image:linear-gradient(135deg, #000, rgba(143, 0, 255, .29));
+    background-image: linear-gradient(135deg, #000, rgba(143, 0, 255, .29));
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    
+
 }
 
-.end{
-  
-
+.end {
     display: flex;
     justify-content: center;
     align-items: center;
-   
-
 }
-.awsome{
+
+.awsome {
     width: 240px;
     height: 80px;
     padding: 10px;
     border: 1px solid #8f00ff;
     text-align: center;
     border-radius: 10px;
-    
+
 }
