--- a/my project/style.css
+++ b/my project/style.css
@@ -5,42 +5,45 @@
 }
 
 body {
-    
+
     height: 100vh;
+
+}
+
+.main-section {
     background-image: url(https://www.time4nutrition.co.uk/wp-content/uploads/2023/02/shutterstock_2191383829.jpg);
     background-repeat: no-repeat;
-   background-size:cover;
+    background-size: cover;
     background-position: center;
-    
-
+    width: 100%;
+    height: 100vh;
 }
 
 .navbar {
     display: flex;
-    width: max-content;
-    height: 100vh;
-  background-color: rgba(8, 8, 107, 0.521);
+    width: 120px;
+    height: 100%;
+    background-color: rgba(8, 8, 107, 0.521);
     gap: 30px;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    
+    position: fixed;
 }
 
-.first-ul{
+.first-ul {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     list-style-type: none;
-    
+    transform: translateY(15%) translateX(15%);
 }
 
 
 .main-a {
     display: flex;
-    width: 130px;
+    width: 100px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bolder;
     color: white;
     background-color: rgb(4, 4, 77);
@@ -48,75 +51,112 @@ body {
     text-align: center;
     transition: 1s;
     justify-content: center;
-
-
-   
-} 
+}
 
 a:hover {
     background-color: rgb(21, 230, 219);
     color: rgb(53, 3, 100);
-    transition: .6s;
+    transition: .5s;
 }
 
-.product-menu{
+.product-menu {
     position: relative;
 }
 
-ul .list{
+ul .list {
     display: flex;
     flex-direction: column;
     gap: 8px;
     position: absolute;
-    left: 130px;
-    top:4px;
-    
-    
-    
+    left: 110px;
+    top: 0px;
 }
 
-ul{
+ul {
     list-style: none;
-    
 }
 
-.list-a{
+.list-a {
     display: none;
-    
-    
 }
 
-.list-a:hover{
+.list-a:hover {
     background-color: black;
     color: rgb(189, 137, 7);
 }
 
 .product-menu:hover .list-a {
     display: flex;
-    width: 220px;
+    width: 180px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bolder;
     color: white;
     background-color: rgb(85, 85, 238);
     color: gold;
     border-radius: 10px;
     text-align: center;
-    transition: .8s;
+    transition: .5s;
     justify-content: center;
+
+}
+
+.product-menu .list-a:hover {
+    background-color: black;
+    color: rgb(189, 137, 7);
+    transition: .5s;
+
+}
+
+.list-menu {
+    width: 150px;
+    background-color: red;
+}
+
+.icons {
+    font-size: 20px;
+    color: white;
+    justify-content: center;
+    transform: translateY(400px);
+}
+
+.page-2 {
+
+    background-image: url('https://starpowersuplements.com/wp-content/uploads/2023/01/w1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.page2-header {
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+    align-items: center;
+    font-family: "Charmonman", cursive;
+    font-size: 30px;
+    color: white;
+    width: 100%;
+    height: 100%;
+    line-height: 25px;
     
 }
 
-.product-menu .list-a:hover{
-    background-color: black;
-    color: rgb(189, 137, 7);
-    transition: .8s;
-    -webkit-transition: .8;
-    -moz-transition: .8;
-    -ms-transition: .8;
-    -o-transition: .8;
-}
+h1{
+    position: relative;
 
-
-
-
+    
+ 
+ }
+ 
+ h1::before{
+     color: goldenrod;
+     content: attr(data-text);
+     position: absolute;
+     overflow: hidden;
+     white-space: nowrap;
+     border-right: 2px solid white;
+     animation: textanim 8s linear infinite;
+ }
