--- a/my project/animation.css
+++ b/my project/animation.css
@@ -1,12 +1,30 @@
 @keyframes textanim {
-    0%, 10%, 100% {
-        width: 0; 
-
+    0%,10%,100%{
+        width: 0;
     }
 
-    70%, 90%{
+    70%,90%{
         width: 100%;
-    
     }
+    
+}
 
+@keyframes swipeanim {
+
+    0%{
+
+    }
+    25%{
+        transform: rotateY(90deg);
+    }
+    50%{
+        transform: rotateY(180deg);
+    }
+    75%{
+        transform: rotateY(270deg);
+    }
+    
+    100%{
+        transform: rotateY(360deg);
+    }
 }
