--- a/task24/style.css
+++ b/task24/style.css
@@ -6,48 +6,56 @@
 
 body {
     height: 100vh;
-    display: flex;
-    justify-content: center;
+    
     background-color: rgb(37, 149, 194);
  
 
 }
 
 .grid-container {
-    transform: translateY(40%) translateX(-22%);
-   width: fit-content;
-   height: fit-content;
+
+   
+    position: relative;
+    
+  
+ width: 100%;
+ height: 100%;
+    
+}
+
+.container{
     display: grid;
-    justify-content: center;
-    align-items: center;
     text-align: center;
+    align-self: center;
     font-size: 2rem;
     color: white;
 grid-template-columns: repeat(3, 1fr);
 grid-template-rows: repeat(3, 1fr);
-    background-color: skyblue;
-    border: 1px solid white;
-    padding-top: 10px;
-    
+   
+    width: 250px;
+    position: absolute;
+    left: 22%;
+    top: 5%;
 }
 
 .text {
-    transform: translateX(110%) translateY(9%);
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     color: white;
     text-align: center;
     font-size: 17px;
     font-weight: 400;
+    padding-top: 10px;
 }
 
 img {
     border: 1px solid white;
-    width: 98px;
-    height: 50px;
+    width: 250px;
+    height: 115px;
     transform: scaleY(1.4);
-    padding-bottom: 8px;
     transition: 800ms;
-    
-
+    margin-top: 38px;
 }
 
 
@@ -60,26 +68,26 @@ img {
 
 
 .grid-item-1{
-    animation: boxanim1 2s ease-in 2 ;
+    animation: boxanim1 1s linear 2 ;
    
 }
 
 .grid-item-2{
-    animation: boxanim2 2s ease-in 2;
+    animation: boxanim2 2s linear 2;
     
 }
 
 .grid-item-3{
-    animation: boxanim3 2s ease-in 2 ;
+    animation: boxanim3 1s linear 2 ;
     
 }
 .grid-item-4 {
-    animation: boxanim4 2s ease-in 2 ;
+    animation: boxanim4 2s linear 2 ;
    
 }
 
 .grid-item-5{
-    animation: boxanim5 2s ease-in 2 ;
+    animation: boxanim5 1s ease-in 2 ;
    
 }
 
