--- a/task25/style.css
+++ b/task25/style.css
@@ -1,13 +1,23 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: #f0f4f8;
 }
 
-.header{
+.container {
+
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.header {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -16,12 +26,12 @@ body{
     height: 200px;
 }
 
-h5{
+h5 {
     font-size: 1rem;
     color: #2c7ae7;
 }
 
-h1{
+h1 {
     font-weight: 700;
     font-size: 2.5rem;
     font-family: Montserrat, sans-serif;
@@ -43,9 +53,9 @@ h1{
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
-    
+
 }
 
 .menu-list-to {
@@ -57,7 +67,8 @@ a{
     text-decoration: none;
     overflow: hidden;
 }
-.menu-list-to > span {
+
+.menu-list-to>span {
     transition: all 0.5s ease;
 }
 
@@ -73,28 +84,30 @@ a{
     text-align: left;
 }
 
-.menu-list-to:hover > span {
+.menu-list-to:hover>span {
     transform: translateY(100%);
 }
 
-.card-container{
+.card-container {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     height: 100%;
-    
+
 }
 
-.card{
+.card {
     position: relative;
     width: 300px;
     height: 400px;
     transform-style: preserve-3d;
     transition: transform 0.5s ease-in;
-   
+
 }
-.front, .back{
+
+.front,
+.back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -102,14 +115,14 @@ a{
     backface-visibility: hidden;
 }
 
-.front{
+.front {
     display: flex;
     justify-content: center;
     align-items: center;
     transform: rotateY(0deg);
 }
 
-.back{
+.back {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -117,42 +130,93 @@ a{
     text-align: center;
     transform: rotateY(180deg);
     background-color: #2c7ae7;
-   color: white;
-   padding: 10px;
+    color: white;
+    padding: 10px;
 }
 
-h5{
+h5 {
     color: white;
 }
 
-.main-card:hover .card-1{
+.main-card:hover .card-1 {
     transform: rotateY(180deg);
 }
 
-.icon{
+.icon {
     color: #2c7ae7;
     font-size: 20px;
-   border: 5px solid white;
+    border: 5px solid white;
     border-radius: 50%;
-    background-color:#fff;
+    background-color: #fff;
 }
 
-.main-card-2:hover .card-2{
+.main-card-2:hover .card-2 {
     transform: rotateY(180deg);
 }
 
-.main-card-3:hover .card-3{
+.main-card-3:hover .card-3 {
     transform: rotateY(180deg);
 }
 
-.header-text{
+.header-text {
     color: #2c7ae7;
     font-size: 20px;
 }
 
-h5{
+h5 {
     font-family: "Montserrat";
     font-weight: bold;
     margin-bottom: 1rem;
     font-size: 1.375rem;
 }
+
+
+
+@media screen and (max-width: 474px) {
+    .media {
+        width: 100%;
+    }
+
+    .project-meniu {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .card-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .card {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        height: 700px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .media {
+        width: 100%;
+    }
+
+    .card-container {
+        width: 100%;
+        display: flex;
+        gap: 5px;
+
+
+    }
+
+    .card {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+}
+
